WorkflowQuery improved